--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,9 @@
             "homepage": "https://github.com/Sopsy"
         }
     ],
+    "require": {
+        "php": "^7.0"
+    },
     "require-dev": {
         "phpunit/phpunit": "^7.4"
     }
